<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rootlay_sendresumeoutactivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:orientation="vertical"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="@dimen/textblankpadding_large"
			android:layout_marginTop="@dimen/changpassmar"
			 >

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1.2"
				android:text="@string/zhiweimingcheng_waifa"
				android:textSize="@dimen/searchwords"
				android:padding="@dimen/textblankpadding"
				 />

			<EditText
				android:id="@+id/jobnameedit"
				android:layout_width="0dip"
				android:layout_height="30dip"
				android:layout_weight="2" 
				
				android:padding="@dimen/textblankpadding_3"
				android:background="@drawable/orangeeditselector"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="@dimen/textblankpadding_large"
			android:layout_marginTop="@dimen/textblankpadding_large"
			 >

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1.2"
				android:text="@string/qiyemingcheng_waifa"
				android:textSize="@dimen/searchwords"
				android:padding="@dimen/textblankpadding"
				 />

			<EditText
				android:id="@+id/comnameedit"
				android:layout_width="0dip"
				android:layout_height="30dip"
				android:layout_weight="2" 
				
				android:background="@drawable/orangeeditselector"
				android:padding="@dimen/textblankpadding_3"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="@dimen/textblankpadding_large"
			android:layout_marginTop="@dimen/textblankpadding_large"
			 >

			<TextView
				
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1.2"
				android:text="@string/qiyeyouxiang_waifa"
				android:textSize="@dimen/searchwords"
				android:padding="@dimen/textblankpadding"
				 />

			<EditText
				android:id="@+id/comemailedit"
				android:layout_width="0dip"
				android:layout_height="30dip"
				android:layout_weight="2" 
				
				android:background="@drawable/orangeeditselector"
				android:padding="@dimen/textblankpadding_3"
				/>
		</LinearLayout>

	</LinearLayout>
	<Button 
		android:id="@+id/confirmbutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/textblankpadding_large"
		android:background="@drawable/refurbish_confirmation"
		android:layout_gravity="center_horizontal"
		android:onClick="sendResume"
		/>

	

</LinearLayout>